--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <!-- CSS link -->
+        <link rel="stylesheet" href="assets\CSS\style.css">
+
+
 </head>
 
 <body>
@@ -27,11 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
                     </li>
-
                     <li class="nav-item">
                         <a class="nav-link" href="#portfolio">Portfolio</a>
                     </li>
-
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
@@ -60,6 +62,10 @@
                 </p>
                 <!-- mb-5 gives extra margin spacing under lead text -->
                 <p class="lead mb-5">Let's create something amazing together!</p>
+                <!-- Bootstrap modal button -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Subscribe to my newsletter!
+                </button>
             </div>
         </section>
     </header>
@@ -76,7 +82,7 @@
                 <!-- mb-4 used to add margin under image -->
                 <div class="col-12 col-md-6 mb-4">
                     <!-- img-fluid class makes the image responsive to its container -->
-                    <img src="assests\images\mei-wong.webp" class="img-fluid" alt="Mei Wong">
+                    <img src="assets\images\mei-wong.webp" class="img-fluid" alt="Mei Wong">
                 </div>
                 <!-- mb-4 used to add margin under text -->
                 <div class="col-12 col-md-6 mb-4">
@@ -101,6 +107,7 @@
                 </div>
             </div>
         </section>
+
         <!-- portfolio section starts here -->
         <section id="portfolio" class="container pb-4">
             <div class="row">
@@ -111,7 +118,7 @@
                 <!-- cols for cards -->
                 <div class="col-12 col-md-6">
                     <div class="card mb-3">
-                        <img src="assests\images\wags-and-walks.webp" class="card-img-top"
+                        <img src="assets\images\wags-and-walks.webp" class="card-img-top"
                             alt="A man walking several dogs early in the morning">
                         <div class="card-body">
                             <h3 class="card-title">Wags & Walks</h3>
@@ -127,7 +134,7 @@
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="card mb-3">
-                        <img src="assests\images\we-wellness.webp" class="card-img-top"
+                        <img src="assets\images\we-wellness.webp" class="card-img-top"
                             alt="A spa with candles towels and natural material">
                         <div class="card-body">
                             <h3 class="card-title">We Wellness</h3>
@@ -143,7 +150,7 @@
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="card mb-3">
-                        <img src="assests\images\math-wiz.webp" class="card-img-top"
+                        <img src="assets\images\math-wiz.webp" class="card-img-top"
                             alt="A child practicing math at a computer">
                         <div class="card-body">
                             <h3 class="card-title">Math Wiz</h3>
@@ -160,7 +167,7 @@
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="card mb-3">
-                        <img src="assests\images\bmi-calculator.webp" class="card-img-top"
+                        <img src="assets\images\bmi-calculator.webp" class="card-img-top"
                             alt="Weighing scales seen from the first person view of the person standing on the scales">
                         <div class="card-body">
                             <h3 class="card-title">BMI Calculator</h3>
@@ -189,65 +196,39 @@
                     hesitate to get in touch. I'm always open to discussing new opportunities and how we can
                     work
                     together to create something amazing!</p>
+
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Sign up!
                 </button>
-
-
-
-
             </div>
-
             <div class="col-12 col-md-10 col-lg-8 mb-4">
 
                 <!-- Add your form here -->
-
                 <form class="row g-3">
-
                     <div class="col-lg-4">
-
                         <label for="full-name" class="form-label">Full Name</label>
-
                         <input type="text" class="form-control" id="full-name">
-
                     </div>
-
                     <div class="col-lg-4">
-
                         <label for="phonenumber" class="form-label">Phone number</label>
-
                         <input type="number" class="form-control" id="phonenumber">
-
                     </div>
-
                     <div class="col-lg-4">
-
                         <label for="email" class="form-label">Email</label>
-
                         <input type="email" class="form-control" id="email">
-
                     </div>
-
                     <div class="col-12">
-
                         <label for="message" class="form-label">Message</label>
-
                         <textarea class="form-control" id="message" rows="3"></textarea>
-
                     </div>
-
                     <div class="col-12">
-
                         <button type="submit" class="btn btn-primary">Send</button>
                     </div>
                 </form>
             </div>
         </div>
         </div>
-
-
-
 
     </footer>
 
@@ -264,6 +245,7 @@
                     <h1 class="modal-title fs-5" id="exampleModalLabel">Subscribe</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
+
                 <div class="modal-body">
                     <p>Join my newsletter for the latest updates on my projects, coding tips, and industry insights
                         delivered straight to your inbox.</p>
@@ -272,6 +254,7 @@
                             <label for="inputName" class="form-label">Name</label>
                             <input type="text" class="form-control" id="inputName">
                         </div>
+
                         <div class="col-lg-6">
                             <label for="inputEmail" class="form-label">Email</label>
                             <input type="email" class="form-control" id="inputEmail">
@@ -283,7 +266,6 @@
                         </div>
                     </form>
                 </div>
-
             </div>
         </div>
     </div>
